k8s/auth/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: auth-service
  namespace: ingress-nginx
spec:
  selector:
    app: sc-auth
  type: ClusterIP
  ports:
    - port: 9096
      targetPort: 9096
